--- a/TestApplication03.html
+++ b/TestApplication03.html
@@ -5,15 +5,20 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Angular -->
-<base href="/">
 <!-- Title -->
-<title>TestApplication02</title>
+<title>TestApplication03</title>
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <!-- MongoDB Stitch -->
 <script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
+<!-- MUURI -->
+<script src="./muuri/web-animations.min.js"></script>
+<script src="./muuri/hammer.js"></script>
+<script src="./muuri/muuri.js"></script>
+<!-- CSS -->
+<link rel="stylesheet" type="text/css" href="./estilos.css">
+<!-- Javascript -->
 <script>
   
 	// cliente de la aplicación
@@ -120,50 +125,33 @@
 </script>
 </head>
 <body>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xs-12">
-				<h3>Tareas</h3>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-4">
-				<div class="panel panel-default">
-					<div class="panel-body">
-						<div class="form-group">
-							<label for="tareaTexto">Tarea</label> <input class="form-control input-sm" type="text" id="tareaTexto">
-						</div>
-						<div class="form-group">
-							<button type="button" class="btn btn-primary btn-sm" onclick="insertar()">Insertar</button>
-						</div>
+	<div class="board">
+		<div class="board-column todo">
+			<div class="board-column-header">To do</div>
+			<div class="board-column-content">
+				<div class="board-item">
+					<div class="board-item-content">
+						<span>Item #</span>1
 					</div>
 				</div>
-				<div class="panel panel-default">
-					<div class="panel-body">
-						<div class="form-group">
-							<label for="tareaId">Id</label> <input class="form-control input-sm" type="text" id="tareaId">
-						</div>
-						<div class="form-group">
-							<button type="button" class="btn btn-primary btn-sm" onclick="borrar()">Borrar</button>
-						</div>
+				<div class="board-item">
+					<div class="board-item-content">
+						<span>Item #</span>2
 					</div>
 				</div>
-			</div>
-			<div class="col-xs-8">
-				<div class="panel panel-default">
-					<div class="panel-body">
-						<table class="table" id="listaTareas">
-							<thead>
-								<tr>
-									<th>Id</th>
-									<th>Tarea</th>
-								</tr>
-							</thead>
-							<tbody></tbody>
-						</table>
-						<div class="form-group">
-							<button type="button" class="btn btn-primary btn-sm" onclick="actualizar()">Actualizar</button>
-						</div>
+				<div class="board-item">
+					<div class="board-item-content">
+						<span>Item #</span>3
+					</div>
+				</div>
+				<div class="board-item">
+					<div class="board-item-content">
+						<span>Item #</span>4
+					</div>
+				</div>
+				<div class="board-item">
+					<div class="board-item-content">
+						<span>Item #</span>5
 					</div>
 				</div>
 			</div>
@@ -173,6 +161,81 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<!-- Inicializamos MUURI -->
+	<script>
+		var itemContainers = [].slice.call(document.querySelectorAll('.board-column-content'));
+		var columnGrids = [];
+		var boardGrid;
+
+		// Define the column grids so we can drag those
+		// items around.
+		itemContainers.forEach(function(container)
+		{
+
+			// Instantiate column grid.
+			var grid = new Muuri(container, {
+				items : '.board-item',
+				layoutDuration : 400,
+				layoutEasing : 'ease',
+				dragEnabled : true,
+				dragSort : function()
+				{
+					return columnGrids;
+				},
+				dragSortInterval : 0,
+				dragContainer : document.body,
+				dragReleaseDuration : 400,
+				dragReleaseEasing : 'ease'
+			}).on('dragStart', function(item)
+			{
+				// Let's set fixed widht/height to the dragged item
+				// so that it does not stretch unwillingly when
+				// it's appended to the document body for the
+				// duration of the drag.
+				item.getElement().style.width = item.getWidth() + 'px';
+				item.getElement().style.height = item.getHeight() + 'px';
+			}).on('dragReleaseEnd', function(item)
+			{
+				// Let's remove the fixed width/height from the
+				// dragged item now that it is back in a grid
+				// column and can freely adjust to it's
+				// surroundings.
+				item.getElement().style.width = '';
+				item.getElement().style.height = '';
+				// Just in case, let's refresh the dimensions of all items
+				// in case dragging the item caused some other items to
+				// be different size.
+				columnGrids.forEach(function(grid)
+				{
+					grid.refreshItems();
+				});
+			}).on('layoutStart', function()
+			{
+				// Let's keep the board grid up to date with the
+				// dimensions changes of column grids.
+				boardGrid.refreshItems().layout();
+			});
+
+			// Add the column grid reference to the column grids
+			// array, so we can access it later on.
+			columnGrids.push(grid);
+
+		});
+
+		// Instantiate the board grid so we can drag those
+		// columns around.
+		boardGrid = new Muuri('.board', {
+			layoutDuration : 400,
+			layoutEasing : 'ease',
+			dragEnabled : true,
+			dragSortInterval : 0,
+			dragStartPredicate : {
+				handle : '.board-column-header'
+			},
+			dragReleaseDuration : 400,
+			dragReleaseEasing : 'ease'
+		});
+	</script>	
 	<!-- Ejecutamos actualizar() al cargar la página -->
 	<script>
 	    $(document).ready(function() {
