--- a/TestApplication03.html
+++ b/TestApplication03.html
@@ -127,33 +127,37 @@
 <body>
 	<div class="board">
 		<div class="board-column todo">
-			<div class="board-column-header">To do</div>
+			<div class="board-column-header"><h1>//TODO:</h1></div>
 			<div class="board-column-content">
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>Item #</span>1
+						<span>//TODO: ITEM 1</span>
+						<span class="glyphicon glyphicon-remove icon-color icon-remove"></span>
 					</div>
 				</div>
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>Item #</span>2
+						<span>//TODO: ITEM 2</span>
+						<span class="glyphicon glyphicon-remove icon-color icon-remove"></span>
 					</div>
 				</div>
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>Item #</span>3
+						<span>//TODO: ITEM 3</span>
+						<span class="glyphicon glyphicon-remove icon-color icon-remove"></span>
 					</div>
 				</div>
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>Item #</span>4
+						<span>//TODO: ITEM 4</span>
+						<span class="glyphicon glyphicon-remove icon-color icon-remove"></span>
 					</div>
 				</div>
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>Item #</span>5
+						<span class="glyphicon glyphicon-plus icon-color icon-plus"></span>
 					</div>
-				</div>
+				</div>				
 			</div>
 		</div>
 	</div>
