--- a/TestApplication03.html
+++ b/TestApplication03.html
@@ -133,27 +133,27 @@
 			<div class="board-column-content">
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>//TODO: ITEM 1</span> <span class="glyphicon glyphicon-remove icon-color icon-remove"></span>
+						<span>//TODO: ITEM 1</span> <span class="glyphicon glyphicon-remove icon-color icon-remove" id="icon-remove-01"></span>
 					</div>
 				</div>
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>//TODO: ITEM 2</span> <span class="glyphicon glyphicon-remove icon-color icon-remove"></span>
+						<span>//TODO: ITEM 2</span> <span class="glyphicon glyphicon-remove icon-color icon-remove" id="icon-remove-02"></span>
 					</div>
 				</div>
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>//TODO: ITEM 3</span> <span class="glyphicon glyphicon-remove icon-color icon-remove"></span>
+						<span>//TODO: ITEM 3</span> <span class="glyphicon glyphicon-remove icon-color icon-remove" id="icon-remove-03"></span>
 					</div>
 				</div>
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>//TODO: ITEM 4</span> <span class="glyphicon glyphicon-remove icon-color icon-remove"></span>
+						<span>//TODO: ITEM 4</span> <span class="glyphicon glyphicon-remove icon-color icon-remove" id="icon-remove-04"></span>
 					</div>
 				</div>
 				<div class="board-item">
 					<div class="board-item-content">
-						<span class="glyphicon glyphicon-plus icon-color icon-plus"></span>
+						<span class="glyphicon glyphicon-plus icon-color icon-plus" id="icon-plus-01"></span>
 					</div>
 				</div>
 			</div>
@@ -188,7 +188,8 @@
 				dragContainer : document.body,
 				dragReleaseDuration : 400,
 				dragReleaseEasing : 'ease'
-			}).on('dragStart', function(item)
+			}
+			).on('dragStart', function(item)
 			{
 				// Let's set fixed widht/height to the dragged item
 				// so that it does not stretch unwillingly when
@@ -196,8 +197,8 @@
 				// duration of the drag.
 				item.getElement().style.width = item.getWidth() + 'px';
 				item.getElement().style.height = item.getHeight() + 'px';
-				console.log('dragStart');
-			}).on('dragReleaseEnd', function(item)
+			}
+			).on('dragReleaseEnd', function(item)
 			{
 				// Let's remove the fixed width/height from the
 				// dragged item now that it is back in a grid
@@ -212,34 +213,41 @@
 				{
 					grid.refreshItems();
 				});
-				console.log('dragReleaseEnd');
-			}).on('layoutStart', function()
+			}
+			).on('layoutStart', function()
 			{
 				// Let's keep the board grid up to date with the
 				// dimensions changes of column grids.
 				boardGrid.refreshItems().layout();
-				console.log('layoutStart');
-			}).on('synchronize', function () { console.log('synchronize'); 
-			}).on('layoutEnd', function (items) { console.log('layoutEnd'); 
-			}).on('add', function (items) { console.log('add'); 
-			}).on('remove', function (items, indices) { console.log('remove'); 
-			}).on('showStart', function (items) { console.log('showStart'); 
-			}).on('showEnd', function (items) { console.log('showEnd'); 
-			}).on('hideStart', function (items) { console.log('hideStart'); 
-			}).on('hideEnd', function (items) { console.log('hideEnd'); 
-			}).on('filter', function (shownItems, hiddenItems) { console.log('filter'); 
-			}).on('sort', function (currentOrder, previousOrder) { console.log('sort'); 
-			}).on('move', function (data) { console.log('move'); 
-			}).on('send', function (data) { console.log('send'); 
-			}).on('beforeSend', function (data) { console.log('beforeSend'); 
-			}).on('receive', function (data) { console.log('receive'); 
-			}).on('beforeReceive', function (data) { console.log('beforeReceive'); 
-			}).on('dragInit', function (item, event) { console.log('dragInit'); 
-			}).on('dragMove', function (item, event) { console.log('dragMove'); 
-			}).on('dragScroll', function (item, event) { console.log('dragScroll'); 
-			}).on('dragEnd', function (item, event) { console.log('dragEnd'); 
-			}).on('dragReleaseStart', function (item) { console.log('dragReleaseStart'); 
-			}).on('destroy', function () { console.log('destroy'); });			
+			}
+			).on('dragInit', function (item, event) 
+			{ 
+				console.log('dragInit.event.target.id [' + event.target.id + ']');
+			}			
+			).on('dragMove', function (item, event) 
+			{ 
+				console.log('dragMove.event.target.id [' + event.target.id + ']');
+			}	
+			).on('synchronize', function () { console.log('synchronize'); }
+			).on('layoutEnd', function (items) { console.log('layoutEnd'); }
+			).on('add', function (items) { console.log('add'); }
+			).on('remove', function (items, indices) { console.log('remove'); }
+			).on('showStart', function (items) { console.log('showStart'); }
+			).on('showEnd', function (items) { console.log('showEnd'); }
+			).on('hideStart', function (items) { console.log('hideStart'); }
+			).on('hideEnd', function (items) { console.log('hideEnd'); }
+			).on('filter', function (shownItems, hiddenItems) { console.log('filter'); }
+			).on('sort', function (currentOrder, previousOrder) { console.log('sort'); }
+			).on('move', function (data) { console.log('move'); }
+			).on('send', function (data) { console.log('send'); }
+			).on('beforeSend', function (data) { console.log('beforeSend'); }
+			).on('receive', function (data) { console.log('receive'); }
+			).on('beforeReceive', function (data) { console.log('beforeReceive'); }
+			).on('dragScroll', function (item, event) { console.log('dragScroll'); }
+			).on('dragEnd', function (item, event) { console.log('dragEnd'); }
+			).on('dragReleaseStart', function (item) { console.log('dragReleaseStart'); }
+			).on('destroy', function () { console.log('destroy'); }
+			);					
 			// Add the column grid reference to the column grids
 			// array, so we can access it later on.
 			columnGrids.push(grid);
