--- a/TestApplication03.html
+++ b/TestApplication03.html
@@ -122,6 +122,11 @@
 		);
 	}
 	
+	function tareaAdd() {
+		var tareaAddTexto = $('#tareaAddTexto').val().trim();
+		console.log('tareaAdd [' + tareaAddTexto + ']');
+	}
+	
 </script>
 </head>
 <body>
@@ -133,29 +138,58 @@
 			<div class="board-column-content">
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>//TODO: ITEM 1</span> <span class="glyphicon glyphicon-remove icon-color icon-remove" id="icon-remove-01"></span>
+						<span>//TODO: ITEM 1</span> <span class="glyphicon glyphicon-trash icon-color icon-trash" id="tarea01Remove"></span>
 					</div>
 				</div>
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>//TODO: ITEM 2</span> <span class="glyphicon glyphicon-remove icon-color icon-remove" id="icon-remove-02"></span>
+						<span>//TODO: ITEM 2</span> <span class="glyphicon glyphicon-trash icon-color icon-trash" id="tarea02Remove"></span>
 					</div>
 				</div>
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>//TODO: ITEM 3</span> <span class="glyphicon glyphicon-remove icon-color icon-remove" id="icon-remove-03"></span>
+						<span>//TODO: ITEM 3</span> <span class="glyphicon glyphicon-trash icon-color icon-trash" id="tarea03Remove"></span>
 					</div>
 				</div>
 				<div class="board-item">
 					<div class="board-item-content">
-						<span>//TODO: ITEM 4</span> <span class="glyphicon glyphicon-remove icon-color icon-remove" id="icon-remove-04"></span>
+						<span>//TODO: ITEM 4</span> <span class="glyphicon glyphicon-trash icon-color icon-trash" id="tarea04Remove"></span>
 					</div>
 				</div>
 				<div class="board-item">
 					<div class="board-item-content">
-						<span class="glyphicon glyphicon-plus icon-color icon-plus" id="icon-plus-01"></span>
+						<span>//TODO: ITEM 5</span> <span class="glyphicon glyphicon-trash icon-color icon-trash" id="tarea05Remove"></span>
 					</div>
 				</div>
+				<div class="board-item">
+					<div class="board-item-content">
+						<span>//TODO: ITEM 6</span> <span class="glyphicon glyphicon-trash icon-color icon-trash" id="tarea06Remove"></span>
+					</div>
+				</div>
+				<div class="board-item">
+					<div class="board-item-content">
+						<span>//TODO: ITEM 7</span> <span class="glyphicon glyphicon-trash icon-color icon-trash" id="tarea07Remove"></span>
+					</div>
+				</div>
+				<div class="board-item">
+					<div class="board-item-content">
+						<span>//TODO: ITEM 8</span> <span class="glyphicon glyphicon-trash icon-color icon-trash" id="tarea08Remove"></span>
+					</div>
+				</div>
+			</div>
+			<div class="board-column-footer">
+				<form class="form-horizontal">
+					<div class="form-group">
+						<div class="col-sm-11">
+							<input type="text" class="form-control" id="tareaAddTexto">
+						</div>
+						<div class="col-sm-1">
+							<button type="button" class="btn btn-warning btn-lg" onclick="tareaAdd()">
+								<span class="glyphicon glyphicon-plus"></span> Add
+							</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
