--- a/TestApplication03.html
+++ b/TestApplication03.html
@@ -122,6 +122,7 @@
 		);
 	}
 	
+	// tareaAdd
 	function tareaAdd() {
 		var tareaAddTexto = $('#tareaAddTexto').val().trim();
 		console.log('tareaAdd [' + tareaAddTexto + ']');
