--- a/TestApplication03.html
+++ b/TestApplication03.html
@@ -122,12 +122,6 @@
 		);
 	}
 	
-	// tareaAdd
-	function tareaAdd() {
-		var tareaAddTexto = $('#tareaAddTexto').val().trim();
-		console.log('tareaAdd [' + tareaAddTexto + ']');
-	}
-	
 </script>
 </head>
 <body>
@@ -147,7 +141,7 @@
 						<span>//TODO: ITEM 2</span> <span class="glyphicon glyphicon-trash icon-color icon-trash" id="tarea02Remove"></span>
 					</div>
 				</div>
-				<div class="board-item">
+				<!-- div class="board-item">
 					<div class="board-item-content">
 						<span>//TODO: ITEM 3</span> <span class="glyphicon glyphicon-trash icon-color icon-trash" id="tarea03Remove"></span>
 					</div>
@@ -176,7 +170,7 @@
 					<div class="board-item-content">
 						<span>//TODO: ITEM 8</span> <span class="glyphicon glyphicon-trash icon-color icon-trash" id="tarea08Remove"></span>
 					</div>
-				</div>
+				</div -->
 			</div>
 			<div class="board-column-footer">
 				<form class="form-horizontal">
@@ -200,15 +194,15 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<!-- Inicializamos MUURI -->
 	<script>
+	
+		// vars
 		var itemContainers = [].slice.call(document.querySelectorAll('.board-column-content'));
 		var columnGrids = [];
 		var boardGrid;
-
-		// Define the column grids so we can drag those
-		// items around.
+		
+		// Define the column grids so we can drag those items around.
 		itemContainers.forEach(function(container)
 		{
-
 			// Instantiate column grid.
 			var grid = new Muuri(container, {
 				items : '.board-item',
@@ -226,24 +220,16 @@
 			}
 			).on('dragStart', function(item)
 			{
-				// Let's set fixed widht/height to the dragged item
-				// so that it does not stretch unwillingly when
-				// it's appended to the document body for the
-				// duration of the drag.
+				// Let's set fixed widht/height to the dragged item so that it does not stretch unwillingly when it's appended to the document body for the duration of the drag.
 				item.getElement().style.width = item.getWidth() + 'px';
 				item.getElement().style.height = item.getHeight() + 'px';
 			}
 			).on('dragReleaseEnd', function(item)
 			{
-				// Let's remove the fixed width/height from the
-				// dragged item now that it is back in a grid
-				// column and can freely adjust to it's
-				// surroundings.
+				// Let's remove the fixed width/height from the dragged item now that it is back in a grid column and can freely adjust to it's surroundings.
 				item.getElement().style.width = '';
 				item.getElement().style.height = '';
-				// Just in case, let's refresh the dimensions of all items
-				// in case dragging the item caused some other items to
-				// be different size.
+				// Just in case, let's refresh the dimensions of all items in case dragging the item caused some other items to be different size.
 				columnGrids.forEach(function(grid)
 				{
 					grid.refreshItems();
@@ -251,8 +237,7 @@
 			}
 			).on('layoutStart', function()
 			{
-				// Let's keep the board grid up to date with the
-				// dimensions changes of column grids.
+				// Let's keep the board grid up to date with the dimensions changes of column grids.
 				boardGrid.refreshItems().layout();
 			}
 			).on('dragInit', function (item, event) 
@@ -283,13 +268,11 @@
 			).on('dragReleaseStart', function (item) { console.log('dragReleaseStart'); }
 			).on('destroy', function () { console.log('destroy'); }
 			);					
-			// Add the column grid reference to the column grids
-			// array, so we can access it later on.
+			// Add the column grid reference to the column grids array, so we can access it later on.
 			columnGrids.push(grid);
 		});
 
-		// Instantiate the board grid so we can drag those
-		// columns around.
+		// Instantiate the board grid so we can drag those columns around.
 		boardGrid = new Muuri('.board', {
 			layoutDuration : 400,
 			layoutEasing : 'ease',
@@ -301,6 +284,24 @@
 			dragReleaseDuration : 400,
 			dragReleaseEasing : 'ease'
 		});
+		
+		// getTareaDOM
+		function getTareaDOM() {
+			var tareaDOMString = '<div class=\"board-item\"><div class=\"board-item-content\"><span>//TODO: ITEM 9</span> <span class=\"glyphicon glyphicon-trash icon-color icon-trash\" id=\"tarea09Remove\"></span></div></div>';
+			var div = document.createElement('div');
+			div.innerHTML = tareaDOMString.trim();
+			return div.firstChild; 
+		}
+		
+		// tareaAdd
+		function tareaAdd() {
+			var tareaAddTexto = $('#tareaAddTexto').val().trim();
+			console.log('tareaAdd [' + tareaAddTexto + ']');
+			var tareaDOM = getTareaDOM();
+			var grid = columnGrids[0];
+			grid.add(tareaDOM);
+		}		
+		
 	</script>
 	<!-- Ejecutamos actualizar() al cargar la página -->
 	<script>
